--- a/nytrack/requirements.txt
+++ b/nytrack/requirements.txt
@@ -1,3 +1,7 @@
-pip install django==1.10.6
-pip install MySQL-python==1.2.5
-pip install python-dateutil
+Django==1.10.6
+MySQL-python==1.2.5
+python-dateutil==2.6.0
+dj-database-url==0.4.2
+Jinja2==2.9.4
+gunicorn==19.4.5
+whitenoise==3.3.0
