--- a/nytrack/requirements.txt
+++ b/nytrack/requirements.txt
@@ -1,7 +1,7 @@
 Django==1.10.6
 MySQL-python==1.2.5
 python-dateutil==2.6.0
-dj-database-url==0.4.2
-Jinja2==2.9.4
-gunicorn==19.4.5
-whitenoise==3.3.0
+#dj-database-url==0.4.2
+#Jinja2==2.9.4
+#gunicorn==19.4.5
+#whitenoise==3.3.0
